fixed header spacing

--- a/scss/_elements.scss
+++ b/scss/_elements.scss
@@ -22,7 +22,8 @@ header {
   left: 0;
   top: 0;
   width: 100%;
-  padding: 4em 0 6em 0;
+  padding-top:4em;
+  padding-bottom: 6em;
 }
   
 main {
